2004-07-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* spf.tcl:       Use ip package and implemented IPv6 type.

	* dns.tcl:       Added support for IPv6 lookups (type AAAA).

	* ip.tcl:        NEW: IP address package
	* ip.test:       tests (ipv4 and ipv6)
	* tcllib_ip.man: Manual page

2004-06-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* spf.tcl:      NEW: Implementation of SPF using our dns package.
	* spf.test:     NEW: tests for SPF package.
	* pkgIndex.tcl: Updated to include SPF.

	* dns-url.txt: Updated the dns-url document to -09 version. This
	implementation is still valid so no changes to the uri code.

2004-05-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Fix issue setting the log level properly.

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-01-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Added automatic recognition of reverse lookups (where
	query is 1.2.3.4). These are converted to in-addr.arpa lookups.
	Added a dns::result to return the whole decoded answer record.
	Added SPF record type (an alias for TXT).
	Incremented package version to 1.0.5

2003-07-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Added decoding for SOA response records. 

2003-05-09  Andreas Kupries  <andreask@activestate.com>

	* resolv.tcl (::resolv::init): Added missing [expr] bracing.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.tcl: Added error message to the timeout.
	* resolv.tcl: incorporated some of Emmanuel's updated code.

2003-04-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* dns.man: *Renamed* to tcllib_dns.man to avoid a name clash with
	the dns manpage from the scotty package.

2003-04-11  Pat Thoyts  <patthoyts@users.sourceforge.net>
